# tallgrass

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  plan.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: worktree-setup.sh
.claude/rules/: analysis-framework.md  analytic-workflow.md  commit-workflow.md  database.md  scraper-architecture.md  testing.md  worktree-workflow.md
Analytic_Methods/: 29_DIM_exploratory_graph_analysis.md
analysis/: __init__.py  beta_binomial.py  beta_binomial_report.py  canonical_ideal_points.py  clustering.py  clustering_report.py  cross_session.py  cross_session_data.py  cross_session_report.py  db.py  eda.py  eda_report.py  experiment_monitor.py  experiment_runner.py  external_validation_data.py  hierarchical.py  hierarchical_report.py  indices.py  indices_report.py  init_strategy.py  irt.py  irt_beta_experiment.py  irt_report.py  network.py  network_report.py  pca.py  pca_overrides.yaml  pca_report.py  phase_utils.py  prediction.py  prediction_report.py  profiles.py  profiles_data.py  report.py  run_context.py  synthesis.py  synthesis_report.py  tuning.py  umap_report.py  umap_viz.py  (+1 more)
analysis/01_eda/: bill_lifecycle.py  eda.py  eda_report.py  geographic.py
analysis/02_pca/: pca.py  pca_report.py
analysis/02c_mca/: mca.py  mca_report.py
analysis/03_mca/: mca.py
analysis/03_umap/: umap_report.py  umap_viz.py
analysis/04_irt/: irt.py  irt_report.py
analysis/04b_irt_2d/: irt_2d.py  irt_2d_report.py
analysis/04c_ppc/: ppc.py  ppc_data.py  ppc_report.py
analysis/05_irt/: irt.py  (+1 more)
docs/: 2d-irt-deep-dive.md  79th-horseshoe-robustness-analysis.md  84th-biennium-analysis.md  84th-legislature-common-space-analysis.md  analysis-primer.md  analytic-flags.md  apple-silicon-mcmc-tuning.md  architecture.md  audit-findings-deep-dive.md  bespoke-report-extraction.md  beta-binomial-deep-dive.md  bill-text-nlp-deep-dive.md  bipartite-network-deep-dive.md  canonical-ideal-points-implementation-plan.md  canonical-ideal-points.md  career-scores.md  cfa-irt-dimensionality-deep-dive.md  classical-indices-deep-dive.md  clustering-deep-dive.md  common-space-ideal-points.md  cross-session-deep-dive.md  data-dictionary.md  data-storage-deep-dive.md  dim1-informative-prior.md  dim1-prior-implementation-plan.md  dime-cfscore-deep-dive.md  dynamic-ideal-points-deep-dive.md  eda-deep-dive.md  experiment-framework-deep-dive.md  experiment-lab-code-review.md  external-validation-results.md  future-bill-text-analysis.md  hierarchical-4-chain-experiment.md  hierarchical-convergence-improvement.md  hierarchical-irt-deep-dive.md  hierarchical-pca-init-experiment.md  hierarchical-shrinkage-deep-dive.md  horseshoe-effect-and-solutions.md  how-irt-works.md  irt-deep-dive.md  (+33 more)
scripts/: kanfocus_all.sh
tests/: conftest.py  factories.py  test_beta_binomial.py  test_bill_actions.py  test_bill_lifecycle.py  test_bill_text.py  test_bills.py  test_bipartite.py  test_canonical_ideal_points.py  test_cli.py  test_clustering.py  test_common_space.py  test_cross_session.py  test_dashboard.py  test_data_integrity.py  test_db_hook.py  test_db_loading.py  test_django_api.py  test_dynamic_irt.py  test_eda.py  test_ega.py  test_experiment_monitor.py  test_experiment_runner.py  test_external_validation.py  test_external_validation_dime.py  test_hierarchical.py  test_indices.py  test_init_strategy.py  test_integration_pipeline.py  test_irt.py  test_irt_2d.py  test_issue_irt.py  test_kanfocus_crossval.py  test_kanfocus_fetcher.py  test_kanfocus_output.py  test_kanfocus_parser.py  test_kanfocus_slugs.py  test_lca.py  test_mca.py  test_model_spec.py  (+31 more)
(+314 files in other folders)
